@@ -1469,6 +1469,10 @@ Fri May 30 15:19:39 CEST 2003
 
 	- Implemented prototype describe function.
 	- Some minor cleanup/bug fixing.
+	
+Mon Jun  2 17:36:03 CEST 2003
+
+	- Fixed segfault in forward definition parsing.
 	- Set ecpg version to 2.12.0.
 	- Set ecpg library to 3.4.2.
 	- Set pgtypes library to 1.0.0
